# nba2kmobile-runthecourt-automation

./: .gitignore  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
rtc_bot/: __init__.py  __main__.py  bridge.py  capture_store.py  cli.py  config.py  engine.py  exceptions.py  ios_device.py  macos.py  model.py  reporting.py  runtime.py  session.py  vision.py
tests/: test_assets.py  test_bridge.py  test_capture_store.py  test_cli.py  test_engine.py  test_exceptions.py  test_macos.py  test_reporting.py  test_reward_flow.py  test_runtime.py  test_session.py  test_vision.py
tools/: replay_check.py  sanitize_assets.py
